Mini fix for hero section clipping into section 1

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -247,7 +247,7 @@ main {
   @apply bg-gradient-to-b from-white to-secondary-200 absolute w-full h-[calc(var(--height-hero-mb)+25px)] md:h-[calc(var(--height-hero)+15%)];
 }
 #home #hero-section {
-  @apply relative flex justify-center z-10 w-full h-[var(--height-hero-mb)] md:h-[var(--height-hero)];
+  @apply relative flex justify-center z-10 w-full;
 }
 #home #hero-section .img-bg {
   @apply absolute bg-no-repeat bg-cover bg-center w-[120%] h-[140%] left-0;
